# service-starter-rs

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: config.rs  errors.rs  lib.rs  log.rs  protocol.rs  util.rs
common/src/cache/: mod.rs  redis.rs
common/src/defines/: errcode.rs  mod.rs
common/src/protocol/: http.rs  json.rs
common/tests/: config.yml  log4rs.yml  yaml_global_config.rs
service-starter/: .gitignore  Cargo.toml  package.sh  rustfmt.toml  service-ctl.sh
service-starter/config/: config.yml  log4rs.yml
service-starter/dbscript/: admin.sql  dump.sh
service-starter/src/: config.rs  main.rs  prelude.rs
service-starter/src/controller/: appstate.rs  mod.rs  server.rs  session.rs
service-starter/src/controller/handlers/: admin.rs  mod.rs
service-starter/src/dao/: admin.rs  base.rs  builder.rs  mod.rs
service-starter/src/model/: doo.rs  mod.rs  po.rs
service-starter/src/model/doo/: wxauth.rs  wxpay.rs
service-starter/src/model/dto/: admin.rs
service-starter/src/model/po/: admin.rs
service-starter/src/service/: admin.rs  builder.rs  mod.rs  service_discover.rs  sms.rs  token.rs  wxauth.rs  wxpay.rs
service-starter/src/service/admin/: admin.rs
service-starter/tests/: config.py  test.py  test_admin.py  utils.py
