[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http="2.2"
actix-web="3"
error-chain = "0.12"
futures-lite = "1.12"
log= "0.4"
log4rs = "0.8"
mysql_async = "0.25"
redis = { version = "0.17", features = ["tokio-comp", "aio", "connection-manager"] }
redis-async-pool = "0.2"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"
futures-lite = "1.12"
async-io = "1.4"
