[package]
name = "service-starter"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5"
actix-rt="1.1"
actix-redis = "0.9"
actix-session = "0.4"
actix-web = { version = "3", features=["compress", "openssl"] }
async-io = "1.3"
common = { path = "../common"}
futures-lite = "1.12"
log= "0.4"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4"
md5 = "0.7"
# not compact with actix web 3
#sqlx = { version = "0.5", features = [ "mysql", "runtime-tokio-rustls" ] }
mysql_async = "0.25"
openssl = "0.10"
rand = "0.8"
sonyflake = "0.1"
tencent_sms = { git = "https://hub.fastgit.org/armersong/tencent_sms.git"}
uuid = { version = "0.8", features = ["v4"] }
validator = { version = "0.12", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.7", features=["rt", "macros"] }
reqwest = "0.11"
